# space_game

./: README.md  config.py  curses_tools.py  explosion.py  game_utils.py  main.py  pyproject.toml  setup.cfg
frames/: explosion_frame_3.txt  explosion_frame_4.txt
src/: config.py  curses_tools.py  explosion.py  game_scenario.py  game_utils.py  main.py  obstacles.py  physics.py
