[tool.poetry]
name = "space_game"
version = "0.1.0"
description = ""
authors = ["Aleksandr Menshikov <menshikov.a.v@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"

flake8 = "5.0.4"
black = "22.10.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
^/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | env
)/
'''

[tool.isort]
line_length = 79
force_sort_within_sections = false
profile = 'google'
